--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.0.7/phaser.min.js"></script>
     <link rel="stylesheet" href="/src/game.css" />
   </head>
-  <body><script type="text/javascript" src="public/src/game.js"></script></body>
+  <body><script type="text/javascript" src="/public/src/game.js"></script></body>
 </html>
